Fixed alignment of center text and center input box. Changed styling of input to have rounded edges to match the submit button. Seperated some css class/id info.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,12 @@ body
 	text-align: center;
 }
 
+.entiresContent
+{
+    display: inline-block; 
+    text-align: left;
+}
+
 .toDoCreationForm
 {
 	text-align: center;
@@ -51,7 +57,16 @@ body
     padding: 12px 20px;
     font-size: 18px;
     font-weight: bold;
+    border-radius: 12px;
+    border-style: groove;
 }
+
+.inputLabel
+{
+	font-size: 18px;
+    font-weight: bold;
+}
+
 
 
 /********************
